<resources>
    <string name="app_name">World Scribe</string>
    <string name="searchHint">Search this Category</string>
    <string name="categoryText">Category</string>
    <string name="personText">Person</string>
    <string name="groupText">Group</string>
    <string name="placeText">Place</string>
    <string name="itemText">Item</string>
    <string name="conceptText">Concept</string>
    <string name="article">Article</string>
    <string-array name="categories_array">
        <item name="person">Person</item>
        <item name="group">Group</item>
        <item name="place">Place</item>
        <item name="item">Item</item>
        <item name="concept">Concept</item>
    </string-array>
    <string name="peopleText">People</string>
    <string name="groupsText">Groups</string>
    <string name="placesText">Places</string>
    <string name="itemsText">Items</string>
    <string name="conceptsText">Concepts</string>
    <string name="createArticleItemText">New Article</string>
    <string name="renameWorldItemText">Rename World</string>
    <string name="createWorldItemText">Create World</string>
    <string name="loadWorldItemText">Open World</string>
    <string name="deleteWorldItem">Delete World</string>
    <string name="settingsItemText">Settings</string>
    <string name="renameArticleItemText">Rename Article</string>
    <string name="deleteArticleItemText">Delete Article</string>
    <string name="syncToDropboxItemText">Backup to Dropbox</string>
    <string name="syncToNextcloudItemText">Backup to Nextcloud</string>
    <string name="viewDeveloperWebsiteItemText">Developer Website</string>
    <string name="enableReaderModeItemText">Enable Reader Mode</string>
    <string name="enableEditorModeItemText">Enable Editor Mode</string>
    <string name="viewAnnouncementsItemText">Announcements</string>
    <string name="viewChangelogItemText">View Changelog</string>
    <string name="feedbackItemText">Feedback</string>
    <string name="imageFileName">Image</string>
    <string name="nextcloudServerTitle">Nextcloud server address\n(e.g. "https://us.hostiso.cloud")</string>
    <string name="nextcloudUsername">Username</string>
    <string name="nextcloudPassword">Password</string>
    <string name="nextcloudLogin">Login</string>
    <string name="nextcloudTitle">Nextcloud</string>
    <string name="emptyFields">Please fill in all fields.</string>
    <string name="aliasesField">Aliases</string>
    <string name="ageField">Age</string>
    <string name="biographyField">Biography</string>
    <string name="connectionsText">Connections</string>
    <string name="snippetsText">Snippets</string>
    <string name="ageHint">Age</string>
    <string name="maleText">Male</string>
    <string name="femaleText">Female</string>
    <string name="otherGenderText">Other</string>
    <string name="bioHint">Biography / Description</string>
    <string name="genderText">Gender</string>
    <string name="personImageDescription">Character\'s Profile Image</string>
    <string name="addConnectionSnippetText">+</string>
    <string name="mandateHint">Mandate / Description</string>
    <string name="mandateText">Mandate</string>
    <string name="membersText">Members</string>
    <string name="descriptionHint">Description</string>
    <string name="residentsText">Residents</string>
    <string name="welcomeText">Welcome to World Scribe!</string>
    <string name="nameWorldHint">World Name</string>
    <string name="createButtonText">Create!</string>
    <string name="relationHintTopText">Relation to the article below</string>
    <string name="relationHintBottomText">Relation to the article above</string>
    <string name="connectionArrowsDescription">Arrows representing a Connection</string>
    <string name="propertiesHint">Properties / Description</string>
    <string name="propertiesField">Properties</string>
    <string name="historyHint">History</string>
    <string name="permissionExplanation">World files reside in your device\'s External Storage. In order to use this app, you must allow write access to External Storage.</string>
    <string name="selectRootDirectoryTitle">IMPORTANT: Data Location</string>
    <string name="selectRootDirectoryExplanation">Please select the location to store the \"WorldScribe\" app folder.\n\nIf you are NOT a new World Scribe user, tap \"Allow access\" immediately, so that the app can find your existing World data.</string>
    <string name="permissionButtonText">Continue</string>
    <string name="emptyListText">Nothing yet!</string>
    <string name="nothingToLinkText">Nothing to link!</string>
    <string name="loadWorldTitle">Enter a World…</string>
    <string name="worldAlreadyExistsText">A World with this name already exists.\nPlease choose a different name.</string>
    <string name="worldCreationErrorText">An error occurred during World creation.</string>
    <string name="loadWorldText">Load World</string>
    <string name="createWorldText">Create World</string>
    <string name="articleNameHint">Article Name</string>
    <string name="aliasesHint">Nicknames / Aliases</string>
    <string name="snippetHint">Enter your snippet here.</string>
    <string name="membershipsText">Memberships</string>
    <string name="residencesText">Residences</string>
    <string name="memberRoleText">(%1$s)</string>
    <string name="selectArticleTitle">Select the %1$s to link</string>
    <string name="saveEditText">SAVE</string>
    <string name="collapsedSectionHeader">▲ %1$s</string>
    <string name="expandedSectionHeader">▼ %1$s</string>
    <string name="createWorldTitle">A World is Born</string>
    <string name="editConnectionTitle">Edit Connection</string>
    <string name="editMembershipTitle">Edit Membership</string>
    <string name="createSnippetTitle">A New Snippet of Info</string>
    <string name="createArticleTitle">A New Article in World History</string>
    <string name="confirmBackupToCloudTitle">Backup %1$s</string>
    <string name="confirmBackupToCloud">Are you sure you wish to upload %1$s to
        %2$s?\nThe uploading process may take several minutes to complete.</string>
    <string name="confirmWorldDeletionTitle">Delete %1$s</string>
    <string name="confirmWorldDeletion">Are you sure you wish to delete %1$s?\nOnce a World is deleted, it cannot be recovered.</string>
    <string name="confirmSnippetDeletionTitle">Delete %1$s</string>
    <string name="confirmSnippetDeletion">Are you sure you wish to delete %1$s?\nOnce a Snippet is deleted, it cannot be recovered.</string>
    <string name="confirmConnectionDeletionTitle">Delete Connection to %1$s</string>
    <string name="confirmConnectionDeletion">Are you sure you wish to delete this Connection to %1$s?</string>
    <string name="confirmMembershipDeletionTitle">Delete Membership to %1$s</string>
    <string name="confirmMembershipDeletion">Are you sure you wish to delete this Membership to %1$s?</string>
    <string name="confirmMemberRemovalTitle">Remove %1$s</string>
    <string name="confirmMemberRemoval">Are you sure you wish to remove %1$s as a Member?</string>
    <string name="confirmResidenceRemovalTitle">Delete Residence at %1$s</string>
    <string name="confirmResidenceRemoval">Are you sure you wish to delete this Residence at %1$s?</string>
    <string name="confirmResidentRemovalTitle">Remove %1$s as a Resident</string>
    <string name="confirmResidentRemoval">Are you sure you wish to remove %1$s as a Resident?</string>
    <string name="confirmArticleDeletionTitle">Delete %1$s</string>
    <string name="confirmArticleDeletion">Are you sure you wish to delete %1$s?\nOnce an Article is deleted, it cannot be recovered.</string>
    <string name="cropImageError">An error occurred while cropping the selected image.</string>
    <string name="saveImageError">An error occurred while saving the selected image.</string>
    <string name="articleAlreadyExistsError">An article with this name and category already exists.</string>
    <string name="articleCreationError">An error occurred while creating the Article.</string>
    <string name="deleteWorldError">An error occurred while deleting this World.</string>
    <string name="saveConnectionError">An error occurred while saving the Connection.</string>
    <string name="emptyRelationError">Relations for both Articles must be filled in.</string>
    <string name="saveMembershipError">An error occurred while saving the Membership.</string>
    <string name="snippetExistsError">A Snippet named %1$s already exists for %2$s.\nPlease choose a different name.</string>
    <string name="deleteSnippetError">An error occurred while deleting %1$s.</string>
    <string name="deleteConnectionError">An error occurred while deleting the Connection to %1$s.</string>
    <string name="deleteMembershipError">An error occurred while deleting the Membership to %1$s.</string>
    <string name="deleteMemberError">An error occurred while removing %1$s from this Group.</string>
    <string name="deleteResidenceError">An error occurred while deleting the Residence at %1$s.</string>
    <string name="deleteArticleError">An error occurred while deleting this Article.</string>
    <string name="emptySnippetNameError">Snippet name cannot be empty.</string>
    <string name="renameSnippetError">An error occurred while renaming %1$s.</string>
    <string name="emptyArticleNameError">Article name cannot be empty.</string>
    <string name="renameArticleToExistingError">A %1$s named %2$s already exists.\nPlease choose a different name.</string>
    <string name="renameArticleError">An error occurred while renaming this Article.</string>
    <string name="renameWithInvalidCharactersError">You may not use these characters in names: %1$s</string>
    <string name="emptyWorldNameError">World name cannot be empty.</string>
    <string name="renameWorldToExistingError">A World named %1$s already exists. Please choose a different name.</string>
    <string name="renameWorldError">An error occurred while renaming this World.</string>
    <string name="memberRoleHint">Role/Rank in group (optional)</string>
    <string name="nameSnippetHint">Snippet Name</string>
    <string name="rename_snippet_title">Rename Snippet</string>
    <string name="renameArticleTitle">Rename Article</string>
    <string name="renameWorldTitle">Rename World</string>
    <string name="selectThemeTitle">App Theme</string>
    <string name="settingsTitle">Settings</string>
    <string name="restartNoticeText">To apply changes, the app will be restarted when you press \"SAVE\"</string>
    <string name="generalInfoHeader">General Info</string>
    <string name="nightModeTitle">Night Mode</string>
    <string name="nightModeSwitchText">Night Mode</string>
    <string name="privacyPolicyTitle">Privacy Policy</string>
    <string name="privacyPolicyContent">World Scribe accesses the external storage on a user device during regular app operations. However, no user data is ever collected, transmitted over a network, or analyzed. All data the user inputs into the app remains entirely within the \"WorldScribe\" folder in their device\'s external storage. The only time this data is sent over a network is via usage of the optional Dropbox and NextCloud backup features, in which case the data is transmitted and stored exclusively by those services, and as such liability falls within those services\' jurisdiction to maintain data privacy. At any time, the user is free to view, edit, copy, transfer, or remove their data in the \"WorldScribe\" folder as they see fit. By using World Scribe, you agree that it may access your external storage for only the reasons outlined above, and you understand that the developers of World Scribe do not collect your data in any fashion.</string>
    <string name="privacyPolicyAgreeButton">Agree</string>
    <string name="privacyPolicyDisagreeButton">Disagree</string>
</resources>