<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/renameArticleItem"
        android:icon="@drawable/rename_article"
        android:title="@string/renameArticleItemText"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/enableReaderModeItem"
        android:icon="@drawable/reader_mode"
        android:title="@string/enableReaderModeItemText"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/enableEditorModeItem"
        android:icon="@drawable/editor_mode"
        android:title="@string/enableEditorModeItemText"
        android:visible="false"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/deleteArticleItem"
        android:icon="@drawable/delete_article"
        android:title="@string/deleteArticleItemText"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/createWorldItem"
        android:title="@string/createWorldItemText"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/loadWorldItem"
        android:title="@string/loadWorldItemText"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/deleteWorldItem"
        android:title="@string/deleteWorldItem"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/settingsItem"
        android:title="@string/settingsItemText"
        app:showAsAction="never"
        />

</menu>