<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.NextcloudLoginActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.averi.worldscribe.views.MarqueeToolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white"
            style="@style/AppTheme" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/pagePadding">

        <TextView
            android:id="@+id/serverTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nextcloudServerTitle"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/headerTextSize" />

        <EditText
            android:id="@+id/serverAddr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalSpacing"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:textColor="?attr/colorPrimary" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/headerSpacing" />

        <TextView
            android:id="@+id/usernameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nextcloudUsername"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/headerTextSize" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalSpacing"
            android:gravity="center_horizontal"
            android:inputType="text"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:id="@+id/passwordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nextcloudPassword"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/headerTextSize" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/verticalSpacing"
            android:gravity="center_horizontal"
            android:inputType="text|textPassword"
            android:textColor="?attr/colorPrimary" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:text="@string/nextcloudLogin"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
