<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SettingsActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.averi.worldscribe.views.MarqueeToolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@android:color/white"
            style="@style/AppTheme" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/pagePadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectThemeTitle"
            android:id="@+id/appThemeTitle"
            android:textSize="@dimen/headerTextSize"
            android:textColor="?attr/colorPrimary"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/themeSelector"
            android:layout_marginTop="@dimen/verticalSpacing" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/headerSpacing" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nightModeSwitchText"
            android:id="@+id/nightModeSwitch"
            android:textSize="@dimen/headerTextSize"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:textColor="?attr/colorPrimary"
            android:switchPadding="@dimen/switchToTextPadding" />

        <Space
            android:layout_width="0dp"
            android:layout_height="@dimen/verticalSpacing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restartNotice"
            android:text="@string/restartNoticeText"
            android:textColor="?attr/colorPrimary"
            android:layout_marginTop="@dimen/verticalSpacing"
            android:textSize="@dimen/standardTextSize"
            android:visibility="visible"
            android:gravity="center" />

    </LinearLayout>

</LinearLayout>
